Correct padding of professional development section on mobile

--- a/stylesheets/rstyle.css
+++ b/stylesheets/rstyle.css
@@ -181,6 +181,9 @@ a:hover {
 	.gridthree .left h3:last-of-type {
 		margin-top: .48em;
 	}
+	.professional-dev {
+		padding-left: 0;
+	}
 	.professional-dev h3 {
 		float: none;
 	}
